# Redsap_Rush

./: .gitignore  .gitmodules  CMakeLists.txt  CleanBuild.bat  CopyAssets.bat  Generate_CMake.bat  README.md  RegenerateAll.bat
App/: CMakeLists.txt
App/Assets/Meshes/: 404Ship.mtl
App/CMake_Source/Public/Gen_App/Config/: AppConfig.h.in
App/Source/Private/App/: main.cpp
App/Source/Private/App/D3D/: DXContext.cpp  DXPipeline.cpp
App/Source/Private/App/Data/: RSRCameraData.cpp  RSRTransform.cpp
App/Source/Private/App/Data/Materials/: RSR3DMaterial.cpp  RSRMaterial.cpp  RSRMaterialParts.cpp
App/Source/Private/App/Data/Meshes/: RSRMesh.cpp  RSRMesh2D.cpp  RSRMesh3D.cpp  RSRMesh3DCollection.cpp  RSRMeshInstances.cpp  RSRMeshLODs.cpp
App/Source/Private/App/Data/Physic/: RSRColMask.cpp  RSRCollider.cpp  RSRCollidersBody.cpp  RSRCollisionFuncs.hpp  RSRCollisionResult.cpp  RSRCollisionType.cpp  RSRIPhysicalEntity.cpp  RSRPPConnection.cpp  RSRPhysicBody.cpp  RSRPhysicBodyID.cpp  RSRPhysicContext.cpp
App/Source/Private/App/Data/Shaders/: ShaderStructures.cpp
App/Source/Private/App/Data/Textures/: RSRTexture2D.cpp  RSRTextureLibrary.cpp
App/Source/Private/App/Data/Trench/: RSRBasicTrench.cpp  RSRTrench.cpp  RSRTrenchDefs.cpp  RSRVoxalGrid.cpp  RSRVoxalPlane.cpp  RSRVoxalTrench.cpp
App/Source/Private/App/GPUCompute/: RSRComputePipeline.cpp  RSRComputeTextureBuffer.cpp  RSRComputeTextureTask.cpp
App/Source/Private/App/GPUCompute/Texture/: RSRComputeGreebleTexture.cpp  RSRComputeUVTexture.cpp
App/Source/Private/App/Game/: RSRPaths.cpp  RSRPlayerPath.cpp  RSRProgramInstance.cpp
App/Source/Private/App/Gameplay/: GameManager.cpp  Pawn.cpp  PlayerController.cpp  RSRScene.cpp
App/Source/Private/App/Gameplay/Scene/: RSRIInstancedMesheHolder.cpp  RSRSceneInstancedMeshes.cpp
App/Source/Private/App/Geometry/: RSRBasicShapes.cpp  RSRMeshLoader.cpp
App/Source/Private/App/Interfaces/Listeners/: IInputListener.cpp
App/Source/Private/App/Managers/: RSRAssetManager.cpp  RSRPhysicManager.cpp  RSRPhysicManager_Collisions.hpp  RSRPhysicManager_Dynamics.hpp  RSRTrenchManager.cpp
App/Source/Private/App/Physic/Demo01/: RSRPD1Scene.cpp
App/Source/Private/App/Physic/LD/: RSRLDElem.cpp  RSRLDReader.cpp  RSRLDType.cpp
App/Source/Private/App/Physic/Solvers/: RSRImpulseSolver.cpp  RSRPositionSolver.cpp  RSRSolver.cpp
App/Source/Private/App/Render/: RSR2DPSO.cpp  RSR3DDebugPSO.cpp  RSR3DInstancedPSO.cpp  RSR3DPSO.cpp  RSRPipelineStateObject.cpp  RSRPipelines.cpp  RSRShaderList.cpp
App/Source/Private/App/SceneObject/: RSROScene.cpp  RSRSObject.cpp  RSRSObjectInstance.cpp
App/Source/Private/App/Shaders/: Basic2DPS.hlsl  Basic2DVS.hlsl  Basic3DInstancedPS.hlsl  Basic3DInstancedVS.hlsl  Basic3DPS.hlsl  Basic3DVS.hlsl  BasicDebugPhysicPS.hlsl  BasicDebugPhysicVS.hlsl  BasicPipeline2D.hlsli  BasicPipeline3D.hlsli  BasicPipeline3DInstanced.hlsli  BasicRootSignature2D.hlsl  BasicRootSignature3D.hlsl  BasicRootSignature3DInstanced.hlsl  BasicRootSignatureDebugPhysic.hlsl  SimplexNoise2D.hlsli
App/Source/Private/App/Shaders/Compute/: ComputeGreebleTexture.hlsl  ComputeRootSignature.hlsl  ComputeUVTexture.hlsl
App/Source/Private/App/System/: RSRRandomizer.cpp
App/Source/Private/App/TheTrench/: RSRODrawableBackground.cpp  RSRODrawableLightSource.cpp  RSRTTScene.cpp
App/Source/Private/App/TheTrench/Gameplay/: RSRTT404Pawn.cpp  RSRTTGameManager.cpp  RSRTTPlayerController.cpp
App/Source/Private/App/Tools/: DebugLayer.cpp  ImageLoader.cpp  RSRLog.cpp  Shader.cpp  Window.cpp
App/Source/Private/App/Tools/Inputs/: RSRGameInput.cpp  RSRGameInput_XInput.cpp  RSRGameInput_devices.cpp  RSRUserInput.cpp
App/Source/Public/App/D3D/: DXContext.h  DXPipeline.h
App/Source/Public/App/Data/: RSRCameraData.h  RSRTransform.h
App/Source/Public/App/Data/Materials/: RSRMaterial.h  RSRMaterialParts.h
App/Source/Public/App/Data/Meshes/: RSRMesh.h  RSRMesh2D.h  RSRMesh3D.h  RSRMesh3DCollection.h  RSRMeshInstances.h  RSRMeshLODs.h
App/Source/Public/App/Data/Physic/: RSRColMask.h  RSRCollider.h  RSRCollidersBody.h  RSRCollisionResult.h  RSRCollisionType.h  RSRIPhysicalEntity.h  RSRPPConnection.h  RSRPhysicBody.h  RSRPhysicBodyID.h  RSRPhysicContext.h
App/Source/Public/App/Data/Shaders/: ShaderStructures.h
App/Source/Public/App/Data/Textures/: RSRTexture2D.h  RSRTextureLibrary.h
App/Source/Public/App/Data/Trench/: RSRBasicTrench.h  RSRTrench.h  RSRTrenchDefs.h  RSRVoxalGrid.h  RSRVoxalPlane.h  RSRVoxalTrench.h
App/Source/Public/App/GPUCompute/: RSRComputePipeline.h  RSRComputeTextureBuffer.h  RSRComputeTextureTask.h
App/Source/Public/App/GPUCompute/Texture/: RSRComputeGreebleTexture.h  RSRComputeUVTexture.h
App/Source/Public/App/Game/: RSRPaths.h  RSRPlayerPath.h  RSRProgramInstance.h
App/Source/Public/App/Gameplay/: GameManager.h  Pawn.h  PlayerController.h  RSRScene.h
App/Source/Public/App/Gameplay/Scene/: RSRIInstancedMesheHolder.h  RSRSceneInstancedMeshes.h
App/Source/Public/App/Geometry/: RSRBasicShapes.h  RSRMeshLoader.h
App/Source/Public/App/Interfaces/Listeners/: IInputListener.h
App/Source/Public/App/Libs/: WinInclude.h
App/Source/Public/App/Managers/: RSRAssetManager.h  RSRPhysicManager.h  RSRTrenchManager.h
App/Source/Public/App/Physic/Demo01/: RSRPD1Scene.h
App/Source/Public/App/Physic/LD/: RSRLDElem.h  RSRLDReader.h  (+1 more)
App/Source/Public/App/Render/: RSR2DPSO.h  RSR3DDebugPSO.h  RSR3DInstancedPSO.h  RSR3DPSO.h  RSRPipelineStateObject.h  RSRPipelines.h  RSRShaderList.h
App/Source/Public/App/SceneObject/: RSROScene.h  RSRSObject.h  RSRSObjectInstance.h
App/Source/Public/App/System/: RSRRandomizer.h
App/Source/Public/App/TheTrench/: RSRODrawableBackground.h  RSRODrawableLightSource.h  RSRTTScene.h
App/Source/Public/App/Tools/: ComPointer.hpp  DebugLayer.h  ImageLoader.h  RSRLog.h  Shader.h  Window.h
ELibs/: CMakeLists.txt
ELibs/GameInput/: CMakeLists.txt  readme_version.txt
LLibs/MDS/: CMakeLists.txt  README.md
LLibs/MDS/Source/Private/MDS/: Hello.cpp  RTool.cpp
LLibs/MDS/Source/Public/MDS/: Hello.h  RTool.h
LLibs/RCB/: CMakeLists.txt
(+93 files in other folders)
